--- a/app/static/CSS/flight_list.css
+++ b/app/static/CSS/flight_list.css
@@ -205,12 +205,12 @@
         display: none;
         flex-direction: row;
         justify-content: center;
+        position: relative;
         width: 100%;
         height: 300px;
         padding: 10px;
         gap: 5%;
         border-top: 1px solid var(--gray-200,#eaecf0);
-
     }
 
     .chat{
